--- a/deep-learning.html
+++ b/deep-learning.html
@@ -97,7 +97,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Stuttgart, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1780403'>Job Application for Sr. Software Engineer, AI and Deep Learning at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1780403'>Job Application for Sr. Software Engineer, AI and Deep Learning at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -109,7 +109,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865496-senior-c-software-engineer-deep-learning-optimization-engine-'>Run:AI Senior C++ Software Engineer (Deep Learning optimization engine) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865496-senior-c-software-engineer-deep-learning-optimization-engine-'>Run:AI Senior C++ Software Engineer (Deep Learning optimization engine) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -117,7 +117,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -140,11 +140,11 @@ Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1752188'>Job Application for WellSaid Labs Deep Learning Engineer at The Allen Institute for Artificial Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1752188'>Job Application for WellSaid Labs Deep Learning Engineer at The Allen Institute for Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/a/jobs/1758571'>Job Application for  Deep Learning Engineer at A? by Airbus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/a/jobs/1758571'>Job Application for  Deep Learning Engineer at A? by Airbus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -161,7 +161,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Deep Learning &amp; Algorithms)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Deep Learning &amp; Algorithms)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -169,7 +169,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Hardware Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Hardware Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -194,7 +194,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://samasource.applytojob.com/apply/zg64yWYMZM/Head-Of-Artificial-Intelligence-And-Deep-Learning'>Head of Artificial Intelligence and Deep Learning - Samasource - Career Page</a></h5> 
+<h5><a href='http://samasource.applytojob.com/apply/zg64yWYMZM/Head-Of-Artificial-Intelligence-And-Deep-Learning'>Head of Artificial Intelligence and Deep Learning - Samasource - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
@@ -212,7 +212,7 @@ text?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/voyage/a63d2972-cb85-4a03-be8f-a8a18940d9e0'>Voyage - Deep Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/voyage/a63d2972-cb85-4a03-be8f-a8a18940d9e0'>Voyage - Deep Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -335,7 +335,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/jobs/1004971'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
+<h5><a href='https://plumerai.workable.com/jobs/1004971'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 24, 2019 ... Paid travel to top research and developer conferences. Contributing to the open-
 source and research community is a fundamental part of your role. Competitive?...</p>
@@ -363,7 +363,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
-<h5><a href='https://saicusa.workable.com/j/8BAEAEC56B'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://saicusa.workable.com/j/8BAEAEC56B'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
@@ -419,7 +419,7 @@ Project?...</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1598066/'>Deep Learning Engineer, Core Modeling in Boston | Open position | DataRobot</a></h5> 
+<h5><a href='https://www.datarobot.com/careers/job/1598066/'>Deep Learning Engineer, Core Modeling in Boston | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -443,7 +443,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
