Sr Project Manager (Ophthalmology- US or Canada) - Syneos Health Careers. Project Manager II/Senior Project Manager - General Medicine - Europe - Syneos Health Careers. Cyber Security Program Manager - DTCC Careers. NICE Actimize Careers - Program manager. The Climate Corporation Careers - Science Project Manager.     Assistant Project Manager at Planate Management Group . ARC Document Solutions Careers - Print Project Manager. Job Application for Technical Project Manager at General Assembly. Project Manager. Assistant Project Manager. Assistant Project Manager. Assistant Project Manager. Assistant Project Manager. Project Manager - Utility Solar - PV (Engineering Project Manager). Project Manager - Utility Solar - PV (Engineering Project Manager). Project Manager - Utility Solar - PV (Engineering Project Manager). Project Manager / Construction Manager - Heavy Industrial (Direct Hire, Lump Sum Construction). Quantum Health Careers - Project Manager. Fullscreen - Project Manager / Scrum Master. Nutanix Careers - Technical Program Manager. Adept Packaging - Jobs: Automation Controls Project Manager - Apply online. Health Assessment Project Manager #0094 job at The Greentree Group in Beavercreek, OH, powered by JobScore. LinkedIn Careers - Insights Program Manager, LinkedIn Marketing Solutions. LinkedIn Careers - Global Talent Organization PMO – Program Manager. Sr Project Manager - CBRE Careers. Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN. Octopus Project Manager | SmartRecruiters. Octopus IT Operations Project Manager | SmartRecruiters. Project Manager - Wpromote - Career Page. Dcode Accelerator Program Manager | SmartRecruiters. Curriculum Associates Careers - Senior Program Manager. HIROTEC AMERICA - Jobs: Stamping Die Project Manager - Apply .... Albireo Energy, LLC - Jobs: Project Manager - Apply online. bChannels - Jobs: Marketing Project Manager - Apply online. Bluestar Genomics - Jobs: Senior Project Manager - Cancer Biology .... Tower Water -

--- a/project-manager.html
+++ b/project-manager.html
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quantum-health/job/oQACafwW'>Quantum Health Careers - Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/quantum-health/job/oQACafwW'>Quantum Health Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692290599-project-manager'>Octopus Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692290599-project-manager'>Octopus Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -154,7 +154,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wpromotecareers.applytojob.com/apply/TmG3BZPFsg/Project-Manager'>Project Manager - Wpromote - Career Page</a></h5> 
+<h5><a href='http://wpromotecareers.applytojob.com/apply/TmG3BZPFsg/Project-Manager'>Project Manager - Wpromote - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -183,7 +183,7 @@
 <p>Jul 18, 2019 ... Apply online for the job of Senior Project Manager - Cancer Biology/Genomics at 
 Bluestar Genomics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/6FD67630F8'>Tower Water - Jobs: Project Manager for a Water Treatment ...</a></h5> 
+<h5><a href='https://www.workable.com/j/6FD67630F8'>Tower Water - Jobs: Project Manager for a Water Treatment ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Project Manager for a Water Treatment Company at 
 Tower Water.</p>
@@ -308,7 +308,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flj/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flj/'>
     Construction Project Manager - North  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -344,7 +344,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flv/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flv/'>
     Construction Project Manager - Scotland at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -356,7 +356,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/it-strategy-program-manager-9375'>IT Strategy Program Manager - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/it-strategy-program-manager-9375'>IT Strategy Program Manager - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -366,7 +366,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 Assistant Project Manager for the Houston, Texas, market. The company 
 specializes in?...</p>
 <hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/ede649480d42-project-manager?source=GoogleJobs'>Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/ede649480d42-project-manager?source=GoogleJobs'>Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... About the Company: A roofing and building envelope subcontractor specializing 
 in roofing, waterproofing & restoration with a project portfolio consisting of?...</p>
@@ -414,7 +414,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692236443-senior-project-manager-m-w-d-'>Publicis Groupe Senior Project Manager (m/w/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692236443-senior-project-manager-m-w-d-'>Publicis Groupe Senior Project Manager (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -426,7 +426,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://icrossing-2.workable.com/j/CF498DB7F0'>iCrossing - Jobs: Project Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://icrossing-2.workable.com/j/CF498DB7F0'>iCrossing - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -436,7 +436,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318031002'>Job Application for Project Manager at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318031002'>Job Application for Project Manager at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
