--- a/product-manager.html
+++ b/product-manager.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/funding-circle-uk/job/oFQwafwV'>Funding Circle UK Careers - Senior Product Manager, Investor</a></h5> 
+<h5><a href='https://jobs.jobvite.com/funding-circle-uk/job/oFQwafwV'>Funding Circle UK Careers - Senior Product Manager, Investor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -182,11 +182,11 @@
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -221,7 +221,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/talix/job/op9Cafw4'> Talix Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/talix/job/op9Cafw4'> Talix Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -241,7 +241,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-grubhub.icims.com/jobs/8540/product-manager/job'>Careers ... - Careers at Grubhub - Product Manager in Chicago, Illinois</a></h5> 
+<h5><a href='https://careers-grubhub.icims.com/jobs/8540/product-manager/job'>Careers ... - Careers at Grubhub - Product Manager in Chicago, Illinois</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Gathering and unearthing unmet customer needs through research, data 
 analysis, user experience analysis and testing, competitive research and any 
@@ -271,7 +271,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787335'>Job Application for Senior Product Designer at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787335'>Job Application for Senior Product Designer at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -356,7 +356,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://heavenhr.workable.com/j/0067C34BF6'>HeavenHR - Jobs: Product Manager - SaaS (m/f/x) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://heavenhr.workable.com/j/0067C34BF6'>HeavenHR - Jobs: Product Manager - SaaS (m/f/x) - Apply online</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -397,7 +397,7 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=ohSh9fwj&__jvst=Employee&__jvsd=s72DfhwN&__jvsc=Twitter&bid=nyBuSKwK'>Schneider Electric NAM Careers - Sr. Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=ohSh9fwj&__jvst=Employee&__jvsd=s72DfhwN&__jvsc=Twitter&bid=nyBuSKwK'>Schneider Electric NAM Careers - Sr. Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -418,7 +418,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dashlane/jobs/1790316'>Job Application for Senior Product Manager (B2B)  at Dashlane</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dashlane/jobs/1790316'>Job Application for Senior Product Manager (B2B)  at Dashlane</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
